--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smax</title>
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <!-- Bootstrap Css -->
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <!-- Custom Css -->
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
