--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <!-- Header Section Start -->
+  <header>
 
+  </header>
+  <!-- Header Section End -->
   <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
