--- a/index.html
+++ b/index.html
@@ -16,7 +16,36 @@
 <body>
   <!-- Header Section Start -->
   <header>
-
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="./image/logo.png" alt="Logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase nav-items">
+            <li class="nav-item">
+              <a class="nav-link nav-item-active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item nav-items-ite">
+              <a class="nav-link" href="#">Service</a>
+            </li>
+            <li class="nav-item nav-items-ite">
+              <a class="nav-link" href="#">Work</a>
+            </li>
+            <li class="nav-item nav-items-ite">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item nav-items-ite">
+              <a class="nav-link" href="#">Clients</a>
+            </li>
+            <li class="nav-item nav-items-ite">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
   <!-- Header Section End -->
   <script src="./js/bootstrap.bundle.min.js"></script>
